@@ -2,8 +2,13 @@ Changes between 2.3.3 and 2.3.4.dev
 -----------------------------------
 
 - fix issue91 - add/discuss package/directory level setups in example
-- allow to dynamically define markers/keywords via
-  item.keywords[...]=assignment
+- allow to dynamically define markers via
+  item.keywords[...]=assignment integrating with "-m" option
+- make "-k" accept an expressions the same as with "-m" so that one
+  can write: -k "name1 or name2" etc.  This is a slight incompatibility
+  if you used special syntax like "TestClass.test_method" which you now
+  need to write as -k "TestClass and test_method" to match a certain
+  method in a certain test class.  
 
 Changes between 2.3.2 and 2.3.3
 -----------------------------------
